# team-finder-backend

./: .gitignore  Makefile  README.md  api_draft.txt  pyproject.toml
app/: __init__.py  database.py
app/api/: __init__.py  util.py
app/api/route/: __init__.py
app/api/route/dependencies/: __init__.py  auth.py  database.py  pagination.py
app/api/route/errors/: http_exceptions.py  messages.py  models.py  responses_presets.py
app/api/route/v1/: __init__.py  auth.py  user.py
app/core/: config.py  exceptions.py
app/model/: __init__.py  favourite.py  history.py  team.py  team_invite.py  team_profile.py  team_request.py  user.py  user_profile.py  user_skill.py
app/service/: __init__.py  token.py
deploy/: .env.example  Dockerfile  compose.yml
